--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <!-- placement of Google Maps API Key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD42QSDgtkyDij_q_xwGxiBnvlWkdqzM0o" />
+            android:value="YOUR_KEY" />
 
         <activity
             android:name=".MainActivity"
